--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: flowstateeng
 patreon: flowstateeng
-custom: ["cash.app/$FlowStateEngineering", "donate.stripe.com/9AQ3fm04OfqCgiAcMN", "account.venmo.com/u/flowstateeng"]
+custom: ["https://cash.app/$FlowStateEngineering", "https://donate.stripe.com/9AQ3fm04OfqCgiAcMN", "https://account.venmo.com/u/flowstateeng"]
